# calculator-rs

./: .gitignore  Cargo.toml  README.md  calculator.sublime-project
src/: lib.rs  main.rs
src/parser/: calculator.rs  checker.rs  mod.rs  operations.rs  parsing_error.rs
