[package]
name = "calculator"
version = "0.1.0"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "calculator_lib"
path = "src/lib.rs"

[[bin]]
name = "calculator"
path = "src/bin/main.rs"